--- a/templates/minar.html
+++ b/templates/minar.html
@@ -11,7 +11,7 @@
     <nav>
         <a href="{{ url_for('index') }}">Comprar Bitcoin</a>
         <a href="{{ url_for('minar') }}">Minar Bitcoin</a>
-        <a href="{{ url_for('vender') }}">Vender Bitcoin</a>
+        <a href="{{ url_for('enviar') }}">Enviar Bitcoin</a>
     </nav>
 
     <!-- Información de la cuenta -->
