[feat] pequeños arreglos

--- a/templates/minar.html
+++ b/templates/minar.html
@@ -47,9 +47,9 @@
         </div>
     </div>
     <div class="minado">
-        <h3>Hash del Bloque:</h3>
+        <h3>Hash del Bloque anterior:</h3>
     <div class="hash-bloque">
-        <p>{{ hash_bloque }}</p>
+        <p>{{ hash_bloque_anterior }}</p>
     </div>
     </div>
     <div class="minado">
